quoting-CypressTK1/force-app/main/default/objects/ApprovalRequestItem__c/ApprovalRequestItem__c.object-meta.xml
<CustomObject>
    <label>Approval Request Item</label>
    <nameField>
        <displayFormat>ARI-{00000}</displayFormat>
        <label>Approval Request Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>