quoting-CypressTK1/force-app/main/default/objects/ApprovalRequestItem__c/fields/ApprovalRequestId__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequestId__c</fullName>
    <label>Approval Request</label>
    <referenceTo>ApprovalRequest__c</referenceTo>
    <relationshipLabel>Approval Request Items</relationshipLabel>
    <relationshipName>ApprovalRequestItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>