quoting-CypressTK1/force-app/main/default/objects/ApprovalRequestItem__c/fields/ApprovalSubmissionComments__c.field-meta.xml
<CustomField>
    <fullName>ApprovalSubmissionComments__c</fullName>
    <label>Approval Submission Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>