quoting-CypressTK1/force-app/main/default/objects/ApprovalRequestItem__c/fields/IsPrimaryItem__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Item</label>
    <type>Checkbox</type>
</CustomField>